@@ -1806,9 +1806,8 @@ command to generate the output files.
       <match value="&lt;?xml" type="string" offset="0">
         <match type="string" value="&lt;?quicktime" offset="0:64"/>
       </match>
-      <match value="RTSPtextRTSP://" type="string" offset="0"/>
-      <match value="rtsptextrtsp://" type="string" offset="0"/>
-      <match value="RTSPtextrtsp://" type="string" offset="0"/>
+      <match value="RTSPtext" type="string" offset="0"/>
+      <match value="rtsptext" type="string" offset="0"/>
       <match value="SMILtext" type="string" offset="0"/>
     </magic>
     <glob pattern="*.qtl"/>
