@@ -1,3 +1,8 @@
+2007-04-13  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Correct the magic for RTSPtext metalinks
+	(See http://bugzilla.gnome.org/show_bug.cgi?id=429383)
+
 2007-03-08  Christian Neumair  <chris@gnome-de.org>
 
 	* freedesktop.org.xml.in: add X11 cursor type (#10043).
